Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18117

Ubuntu 24.02 build fails with "no previous prototype for ‘llog_validate_record’"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      After the latest batch of landings on master, Ubuntu 24.04 build fails with:

      make[7]: Circular /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a//modules.order <- /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/ dependency dropped.
        CC [M]  /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/lustre/fid/fid_request.o
        CC [M]  /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/lustre/obdclass/llog.o
        CC [M]  /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/lnet/lnet/api-ni.o
        CC [M]  /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/libcfs/libcfs/linux/linux-prim.o
        CC [M]  /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/lustre/ptlrpc/gss/sec_gss.o
      /var/lib/jenkins/workspace/lustre-reviews/arch/x86_64/build_type/client/distro/ubuntu2404/ib_stack/inkernel/BUILD/lustre-2.15.65_1_ga755b6a/lustre/obdclass/llog.c:1541:5: error: no previous prototype for ‘llog_validate_record’ [-Werror=missing-prototypes]
       1541 | int llog_validate_record(const struct lu_env *env, struct llog_handle *llh,
            |     ^~~~~~~~~~~~~~~~~~~~
      

      The patch that introduced this function is "LU-14714 mgc: server to mount without local config" https://review.whamcloud.com/55283 .

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: