LU-18117 obdclass: fix llog_validate_record prototype

Fix prototype of function llog_validate_record() to make it static
inline, otherwise build fails on some platforms (e.g. ubuntu 2404).

Fixes: 96d8987a36 ("LU-14714 mgc: server to mount without local config")
Test-Parameters: trivial
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: Ica8cbb9bffdb2e7abd5284ab0bbd3d026961bae1
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55964
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>